--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "homepage": "https://github.com/bartw/gatsby-from-scratch#readme",
   "dependencies": {
     "gatsby": "^2.18.15",
+    "gatsby-plugin-react-helmet": "^3.1.18",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
