--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/bartw/gatsby-from-scratch#readme",
   "dependencies": {
     "gatsby": "^2.18.15",
+    "gatsby-plugin-manifest": "^2.2.34",
     "gatsby-plugin-react-helmet": "^3.1.18",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
